Finished writing component - untestd

--- a/ghi/src/components/Home/Landing.css
+++ b/ghi/src/components/Home/Landing.css
@@ -1,6 +1,6 @@
-html {
+/* html {
     background-color: black;
-}
+} */
 
 .hero-carosuel {
     margin-top: 25px;
@@ -20,6 +20,6 @@ html {
     padding-top: 5px;
     padding-bottom: 5px;
     margin-top: 10px;
-    
+
 
 }
