--- a/ghi/src/components/Home/Rows.css
+++ b/ghi/src/components/Home/Rows.css
@@ -1,8 +1,7 @@
-/* Rows.css */
-
 .row {
   background-color: #0d0225;
-  padding-left: 325px;
+  padding-left: 11%; /* Adjust the padding as needed */
+  margin-left: 11%; /* Added margin to create space for the menu */
 }
 
 .row__posters {
@@ -18,24 +17,16 @@
 }
 
 .row__poster {
-  max-height: 298px;
-  margin-top: 600px;
+  max-height: 325px;
+  margin-top: 0px;
+  margin-top: 0px;
   padding-left: 10px;
   width: 23%;
   transition: transform 450ms;
-  z-index: 1
+  z-index: 1;
 }
 
 .row__poster:hover {
   transform: scale(1.08);
-  opacity: 1;
-}
-
-.row__posterLarge {
-  max-height: 250px;
-}
-
-.row__posterLarge:hover {
-  transform: scale(1.09);
   opacity: 1;
 }
