--- a/ghi/src/index.css
+++ b/ghi/src/index.css
@@ -1,5 +1,10 @@
 /* You should probably replace with with your own CSS */
 
+* {
+  margin: 0;
+}
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
