search bar added to the landing page

--- a/ghi/src/components/Home/Landing.css
+++ b/ghi/src/components/Home/Landing.css
@@ -46,12 +46,27 @@ header {
 
 
 .search-bar {
-    border-radius: 25%;
-    width: 400px;
-    background-color: rgb(55, 49, 49);
-    padding-top: 5px;
-    padding-bottom: 5px;
-    margin-top: 10px;
-
-
+  width: 26.4%;
+  background-color: rgb(55, 49, 49);
+  padding: 8px;
+  /* position: relative; */
+  margin-left: 71.8%;
+  margin-right: 10px;
+  margin-top: 10px;
+  border-radius: 20px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  color: white;
+  border: none;
+  outline: none;
+  font-size: 16px;
 }
+
+.search-bar::placeholder {
+  color: rgba(255, 255, 255, 0.7);
+}
+
+.search-bar:focus {
+  transition: box-shadow 0.3s ease-in-out;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
