--- a/ghi/src/root.css
+++ b/ghi/src/root.css
@@ -1,5 +1,5 @@
 :root {
-    --color-text: #5e2c2c;
+    --color-text: #efe412;
     --color-primary: #576cbc;
     --color-secondary: #19376d;
     --color-dark: #0b2447;
@@ -7,5 +7,3 @@
     background-color: #0d0225;
 
 };
-
-
