--- a/ghi/src/App.css
+++ b/ghi/src/App.css
@@ -1,4 +1,5 @@
 /* You should probably replace this with your own CSS */
+/* @import "~bootstrap/dist/css/bootstrap.min.css"; */
 
 .App {
     text-align: center;
