--- a/ghi/src/components/Home/Menu.css
+++ b/ghi/src/components/Home/Menu.css
@@ -1,7 +1,7 @@
 .side-menu {
   height: 100%;
   position: fixed;
-  top: 40px;
+  top: 70px;
   left: 0;
   background-color: #111;
   color: white;
@@ -31,7 +31,7 @@
 
 .side-menu li {
   margin: 5px 0;
-  padding: 8px;
+  padding: 3px;
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
@@ -39,3 +39,9 @@
 .side-menu li:hover {
   background-color: rgba(255, 255, 255, 0.1);
 }
+
+hr.solid {
+    border-top: 2px solid #bbb;
+    border-radius: 7px 7px 7px 7px;
+    width: 125px;
+  }
