--- a/ghi/src/Nav.css
+++ b/ghi/src/Nav.css
@@ -7,7 +7,7 @@
   width: 100%;
   height: 70px; /* Adjust the height as needed */
   z-index: 1;
-  background-color: #d6d1e2;
+  background-color: #000000;
   transition: background-color 0.5s ease-in-out; /* Added transition for background color change */
 }
 
@@ -23,10 +23,10 @@
 
 .nav__logo {
     position: fixed;
-    top: 10px;
-    width: 80px;
+    top: -15px;
+    width: 269px; /* Drags the bottom right of the image */
     object-fit: contain;
-    padding-left: 20px;
+    padding-left: 7px; /* Originally set at 20 its working the left side of the image*/
     cursor: pointer;
 }
 
