--- a/ghi/src/Nav.css
+++ b/ghi/src/Nav.css
@@ -26,7 +26,7 @@
     top: -15px;
     width: 269px; /* Drags the bottom right of the image */
     object-fit: contain;
-    padding-left: 7px; /* Originally set at 20 its working the left side of the image*/
+    margin-left: -59px; /* Originally set at 20 its working the left side of the image*/
     cursor: pointer;
 }
 
