--- a/ghi/src/components/Home/Rows.css
+++ b/ghi/src/components/Home/Rows.css
@@ -1,6 +1,6 @@
 .row {
-  background-color: #0d0225;
-  padding-left: 11%; /* Adjust the padding as needed */
+  background-color: #121212;
+  padding-left: 11%; /* Adjust the padding as needed  #0d0225*/
   margin-left: 11%; /* Added margin to create space for the menu */
 
 }
