--- a/ghi/src/components/Cards/wishlistCard.css
+++ b/ghi/src/components/Cards/wishlistCard.css
@@ -1,12 +1,30 @@
 @import url('https://fonts.googleapis.com/css2?family=K2D:wght@100&display=swap');
 
 
+.wcontent-capsules {
+    margin-bottom: 5px;
+    z-index: 1;
+    position: relative;
+    right: 450px;
+    top: 15px;
+    margin-right: 5px;
+}
+
+.gcontent-capsules {
+            margin-top: 12px;
+            display: flex;
+            gap: 5px;
+            }
+
+            .gcontent-capsules img {
+            margin-right: 2px;
+            }
+
 .side-by-side {
             display: flex;
             justify-content: flex-end;
             position: relative;
             top: 0px;
-            padding-right: 40px;
         }
 .link-container {
             margin-right: 10px;
@@ -17,7 +35,7 @@
             color: white !important;
         }
 
-.rcard {
+.wcard {
     background-color: black;
     width: 800px;
     height: 145px;
@@ -25,21 +43,21 @@
     border-radius: 10px;
     overflow: hidden;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    margin: 10px;
     margin-top: 50px;
-
+    margin-left: 10px;
+/*     display: flex; */
 }
 
-.card-content {
+.wcard-content {
     display: flex;
 }
 
-.card-photo {
+.wcard-photo {
     flex: 1;
     overflow: hidden;
 }
 
-.card-photo img {
+.wcard-photo img {
     background-color: black;
     width: 200px;
     height: 125px;
@@ -48,10 +66,10 @@
     margin: 10px;
     margin-bottom: 10px;
     margin-left: 25px;
-    box-shadow: 0px 0px 10.6px 4px rgba(255, 255, 255, 0.25);
+    box-shadow: 0px 0px 10.6px 10px rgba(255, 255, 255, 0.25);
 }
 
-.card-details {
+.wcard-details {
     flex: 2;
     padding: 0px;
     color: white;
@@ -60,21 +78,28 @@
     text-align: right;
     width: 50%;
     height: 50%;
-    /* align-items: center; */
+    align-items: center;
 }
 
-.card-title {
+hr.solid {
+    border-top: 2px solid #bbb;
+    border-radius: 7px 7px 7px 7px;
+    width: 500px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
+
+.wcard-title {
     font-size: 20px;
-    margin: 0;
-    padding-right: 45px;
+
+    padding-right: 70px;
     color: white;
     margin-top: 40px;
 }
 
-hr.rsolid {
-    border-top: 2px solid #bbb;
-    border-radius: 7px 7px 7px 7px;
-    width: 500px;
-    margin-top: 2px;
-    margin-bottom: 2px;
-  }
+.wcard-description {
+    font-size: 14px;
+    margin: 0;
+    padding-right: 10px;
+    color: white;
+}
