--- a/ghi/src/components/Dashboard/dashboard.css
+++ b/ghi/src/components/Dashboard/dashboard.css
@@ -2,19 +2,19 @@
 
 body {
   background: #121212;
-  color: #121212;
+  /* color: #121212; */
   font-family: "K2D";
 }
 
 main {
   max-width: 1100px;
-  /* margin: 30px auto; */
-  background: #121212;
+  margin: 70px; /* fill in for top menu */
+  background: 121212;
   padding: 30px;
-  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
+
   /* position: relative; */
   right: 0;
-  margin-left: auto;
+  margin-left: 413px;
   margin-right: 0;
 }
 
@@ -40,7 +40,7 @@ p {
 
 #tabs {
   padding: 0;
-  width: 1150px;
+  width: 1100px;
   margin-left: -30px;
   background: #2B2A28;
   height: 40px;
@@ -80,11 +80,12 @@ p {
   text-transform: uppercase;
   text-align: center;
   width: 200px;
-  height: 100%;
+  /* height: 100%; */
   line-height: 40px;
   margin-top: -40px;
   cursor: pointer;
   font-family: "K2D";
+  /* border-right: #ffffff solid 2px; */
 }
 
 #tabs label::before {
@@ -169,18 +170,4 @@ footer {
   margin: 5px;
 } */
 
-/* .board-cards-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-} */
 
-/* .card-container {
-  display: flex;
-  justify-content: space-between;
-} */
-
-/* .card {
-  width: 30%;
-  margin-bottom: 0;
-} */
