--- a/ghi/src/components/Home/Menu.css
+++ b/ghi/src/components/Home/Menu.css
@@ -1,7 +1,7 @@
 .side-menu {
   height: 100%;
   position: fixed;
-  top: 40px;
+  top: 70px;
   left: 0;
   background-color: #111;
   color: white;
@@ -9,7 +9,7 @@
   width: 190px;
   z-index: 1;
   overflow-y: auto; /* Enable vertical scrolling if needed */
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); /* Add a subtle box shadow */
+  /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); Add a subtle box shadow */
   transition: width 0.5s ease-in-out;
 
   @media (max-width: 68px) {
@@ -31,7 +31,7 @@
 
 .side-menu li {
   margin: 5px 0;
-  padding: 8px;
+  padding: 1px;
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
