Create additional User Page and All games page still needs some improvements and functional adjustments

--- a/ghi/src/Nav.css
+++ b/ghi/src/Nav.css
@@ -28,6 +28,7 @@
     object-fit: contain;
     margin-left: -59px; /* Originally set at 20 its working the left side of the image*/
     cursor: pointer;
+    /* z-index: 1; */
 }
 
 
@@ -40,5 +41,6 @@
     top: 10px;
     padding-bottom: 5px;
     object-fit: contain;
+     /* z-index: 1; */
 
 }
