--- a/ghi/src/components/Home/Menu.css
+++ b/ghi/src/components/Home/Menu.css
@@ -45,3 +45,14 @@ hr.solid {
     border-radius: 7px 7px 7px 7px;
     width: 125px;
   }
+
+
+.all-games {margin: 5px 0;
+  padding: 3px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.all-games p:hover {
+  background-color: rgba(255, 255, 255, 0.1);
+}
