--- a/ghi/src/components/Home/Rows.css
+++ b/ghi/src/components/Home/Rows.css
@@ -1,5 +1,5 @@
 .row {
-  background-color: #0d0225;
+  background-color: #545454;
   padding-left: 11%; /* Adjust the padding as needed */
   margin-left: 7%; /* Added margin to create space for the menu */
 
