Modifications trying to set up gameslist page

--- a/ghi/src/root.css
+++ b/ghi/src/root.css
@@ -1,5 +1,5 @@
 :root {
-    --color-text: #efe412;
+    --color-text: #5e5c2c;
     --color-primary: #576cbc;
     --color-secondary: #19376d;
     --color-dark: #0b2447;
