--- a/ghi/src/Nav.css
+++ b/ghi/src/Nav.css
@@ -6,7 +6,7 @@
   top: 0;
   padding: 20px;
   width: 100%;
-  height: 70px; /* Adjust the height as needed */
+  height: 103px; /* Adjust the height as needed */
   z-index: 1;
   background-color: #000000;
   transition: background-color 0.5s ease-in-out; /* Added transition for background color change */
@@ -26,13 +26,13 @@
 .nav__logo {
     position: fixed;
     top: -15px;
-    width: 250px;
+    width: 350px;
 
     object-fit: contain;
     margin-left: -40px;
     cursor: pointer;
     padding: 16px;
-    /* z-index: 1; */
+    z-index: 1;
 }
 
 
@@ -76,4 +76,27 @@ input[type=text] {
   border-radius: 25px;
   background: linear-gradient(to right, #FFFFFF 0%, #464747 #F9F9F9 100%);
   outline: none;
+}
+
+
+/* Navigation DROP DOWN */
+
+.nav__dropdown {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background-color: rgb(255, 0, 0);
+  border: 1px solid #ccc;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  z-index: 2;
+  display: none;
+}
+
+.nav__avatar-container:hover .nav__dropdown {
+  display: block;
+}
+
+.nav__dropdown-item {
+  padding: 10px;
+  cursor: pointer;
 }
