--- a/ghi/src/components/Home/Landing.css
+++ b/ghi/src/components/Home/Landing.css
@@ -1,81 +1,65 @@
-@import "../../root.css";
-@import '../../Nav.css';
+@import url('https://fonts.googleapis.com/css2?family=K2D:wght@100&display=swap');
 
-
-/* .root */
+.homeH3 {
+  font-family: K2D;
+  color: white;
+  text-align: left;
+  margin-left: 300px;
+}
 
 .hero-carousel-container {
-  background-color: #0d0225;
+  background-color: #000000;
   overflow: hidden;
   position: relative;
-  margin: 0px auto; /* Center the carousel horizontally */
-  width: 50%; /* Adjust the width as needed */
+  margin: 0px auto;
+  margin-top: 10px;
+  margin-right: 225px;
+  width: 60%;
+  max-width: 1200px;
+  border-radius: 50px;
+  z-index: 0;
+  box-shadow:
+    0px 30px 150px 30px rgb(255, 255, 255),
+    /* 0px 30px 50px 30px rgba(147, 2, 184, 0.371); */
 }
 
 .carousel-inner {
   display: flex;
   transition: transform 450ms ease-in-out;
-
+  /* border-radius: 20px; */
+  overflow: hidden;
 }
 
 .carousel-item {
   min-width: 100%; /* Ensure each item takes the full width */
+  border-radius: 20px;
 }
+
 
 .carousel-item img {
   width: 100%;
   height: auto;
-  padding-top: 19.8px;
-  margin-left: 30px;
-
-
-
+  /* padding-top: 19.8px; */
+  margin-left: auto;
+  margin-right: auto; /* Center the image horizontally */
+  border-radius: 20px;
 }
 
 .carousel-control-prev,
 .carousel-control-next {
   width: 5%; /* Adjust the width of the controls as needed */
+  border-radius: 20px;
 }
-
 
 header {
-    background-color: #0d0225;
-    margin-top: 50.5px;
-
+  background-color: #000000;
+  margin-top: 50.5px;
 }
 
-
-
-/* .search-bar {
-  width: 100px;
-  background-color: rgb(55, 49, 49);
-  padding: 8px;
-  position: relative;
-  margin-left: 71.8%;
-  margin-right: 10px;
-  margin-top: 10px;
-  border-radius: 20px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  color: white;
-  border: none;
-  outline: none;
-  font-size: 16px;
-} */
-
-/* .search-bar::placeholder {
-  color: rgba(255, 255, 255, 0.7);
+.homeline {
+    width: 77%;
+    margin-left: 275px;
+    height: 3px;
+    background: linear-gradient(to right, #ff10bf, #009dff);
+    box-shadow: 0px 2px 40px rgba(119, 0, 255, 0.1);
 }
-
-.search-bar:focus {
-  transition: box-shadow 0.3s ease-in-out;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-}
-
-.search-bar::placeholder {
-  color: rgba(255, 255, 255, 0.7);
-}
-
-.search-bar:focus {
-  transition: box-shadow 0.3s ease-in-out;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-} */
