--- a/ghi/src/components/Home/Menu.css
+++ b/ghi/src/components/Home/Menu.css
@@ -1,7 +1,7 @@
 .side-menu {
   height: 100%;
   position: fixed;
-  top: 70px;
+  top: 74px;
   left: 0;
   background-color: #000000;
   color: white;
@@ -32,7 +32,7 @@
 
 .side-menu li {
   margin: 5px 0;
-  padding: 1px;
+  padding: 0px;
   cursor: pointer;
   transition: background-color 0.3s ease;
   font-size: 13px;
@@ -44,6 +44,12 @@
 
 hr.solid {
     border-top: 2px solid #bbb;
+    border-radius: 7px 7px 7px 7px;
+    width: 125px;
+  }
+
+hr.dotted {
+    border-top: 2px dotted #bbb;
     border-radius: 7px 7px 7px 7px;
     width: 125px;
   }
@@ -62,3 +68,15 @@ hr.solid {
 .space {
   margin-top: 2px;
 }
+
+.home {
+    background-clip: text;
+    color: transparent;
+    background-image: linear-gradient(to right, #1084ff, #ff00fb);
+    background-size: 60% 100%;
+    z-index: 1;
+}
+
+.small-space {
+            margin-bottom: 10px;
+        }
