--- a/ghi/src/components/Home/Rows.css
+++ b/ghi/src/components/Home/Rows.css
@@ -1,7 +1,7 @@
 .row {
-  background-color: #545454;
-  padding-left: 11%; /* Adjust the padding as needed */
-  margin-left: 7%; /* Added margin to create space for the menu */
+  background-color: #000000;
+  padding-left: 11%;
+  margin-left: 7%;
 
 }
 
@@ -9,7 +9,12 @@
   display: flex;
   overflow-y: hidden;
   overflow-x: scroll;
-  padding: 20px;
+  padding: 0px;
+  margin-left: 35px;
+  margin-right: 10px;
+  gap: 50px;
+  margin-top: -40px;
+  margin-bottom: 20px;
 }
 
 /* Below is what hides the scrollbar */
@@ -29,4 +34,15 @@
 .row__poster:hover {
   transform: scale(1.08);
   opacity: 1;
+}
+
+.homecard {
+  display: flexbox;
+}
+
+.line {
+    width: 90%;
+    height: 3px;
+    background: linear-gradient(to right, #ff10bf, #009dff);
+    z-index: 1;
 }
