--- a/ghi/src/components/Cards/boardCard.css
+++ b/ghi/src/components/Cards/boardCard.css
@@ -2,21 +2,18 @@
   position: absolute;
   bottom: 50px;
   right: 0;
-
 }
 
 .left {
   position: absolute;
   bottom: 50px;
   left: 0;
-
 }
 
 .center {
   position: relative;
   left: 55px;
   bottom: -10px;
-
 }
 
 .boardbutton {
@@ -81,18 +78,25 @@
 /*   } */
 
   .flex-container {
-    resize: horizontal;
-    overflow: hidden;
     margin: 7px;
     display: inline-flex;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     color: rgba(250, 250, 250, 0.8);
-    border-radius: 25px;
-    box-shadow: 0px 10px 10px black;
-
-
-  }
+    /* border-radius: 25px; */
+    /* box-shadow: 0px 10px 10px black; */
+}
 
 .card-img-top {
   box-shadow: 0px 20px 20px black;
+  width: 20rem;
+  height: 12rem;
+  object-fit: cover;
+
+}
+
+.small-card-img-top {
+  box-shadow: 0px 20px 20px black;
+  width: 8rem;
+  height: 5rem;
+
 }
