--- a/ghi/src/components/UserHome/UserNavBar.css
+++ b/ghi/src/components/UserHome/UserNavBar.css
@@ -1,9 +1,9 @@
-.search-bar {
+/* .search-bar {
   width: 26.4%;
   background-color: rgb(0, 0, 0);
   padding: 4.7px;
   display: flex;
-  /* position: relative; */
+  position: relative;
   margin-left: 69%;
   margin-right: 10px;
   margin-top: 10px;
@@ -13,7 +13,7 @@
   border: none;
   outline: none;
   font-size: 16px;
-  /* z-index: 1; */
+  z-index: 1;
 }
 
 .search-bar::placeholder {
@@ -32,4 +32,4 @@
 .search-bar:focus {
   transition: box-shadow 0.3s ease-in-out;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-}
+} */
