--- a/ghi/src/components/Cards/reviewCard.css
+++ b/ghi/src/components/Cards/reviewCard.css
@@ -9,8 +9,9 @@
             padding-right: 40px;
         }
 .link-container {
-            margin-right: 10px;
-            margin-left: 10px;
+            /* margin-right: 10px; */
+            /* margin-left: 10px; */
+            margin-top: 40px;
 
         }
 .side-by-side a {
@@ -18,15 +19,17 @@
         }
 
 .rcard {
-    background-color: black;
-    width: 800px;
+    background-color: rgb(44, 44, 44);
+    width: 400px;
     height: 145px;
     border: 1px solid black;
     border-radius: 10px;
     overflow: hidden;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     margin: 10px;
-    margin-top: 50px;
+    margin-top: 100px;
+    margin-left: -10px;
+    margin-bottom: 120px;
 
 }
 
@@ -36,7 +39,7 @@
 
 .card-photo {
     flex: 1;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 .card-photo img {
@@ -49,6 +52,7 @@
     margin-bottom: 10px;
     margin-left: 25px;
     box-shadow: 0px 0px 10.6px 4px rgba(255, 255, 255, 0.25);
+    z-index: 1;
 }
 
 .card-details {
@@ -58,15 +62,19 @@
     font-family: 'K2D';
     position: relative;
     text-align: right;
-    width: 50%;
-    height: 50%;
+
+    /* width: 50%;
+    height: 50%; */
+    font-size: 12px;
     /* align-items: center; */
 }
 
 .card-title {
-    font-size: 20px;
+    flex: 2;
+    text-align: center;
+    font-size: 15px;
     margin: 0;
-    padding-right: 45px;
+    /* padding-right: 45px; */
     color: white;
     margin-top: 40px;
 }
@@ -74,7 +82,7 @@
 hr.rsolid {
     border-top: 2px solid #bbb;
     border-radius: 7px 7px 7px 7px;
-    width: 500px;
+    width: 150px;
     margin-top: 2px;
     margin-bottom: 2px;
   }
