--- a/ghi/src/components/GameDetails/gameDetails.css
+++ b/ghi/src/components/GameDetails/gameDetails.css
@@ -111,7 +111,7 @@
 .gamescard-img2 {
     position: relative;
     width: 1330px;
-    height: 730px;
+    height: 2000px;
     margin-top: 100px;
     margin-left: 190px;
     /* border-radius: 20px; */
@@ -125,7 +125,7 @@
     left: 100px;
     width: 100%;
     height: 100%;
-    /* background-size: cover; */
+    background-size: cover;
     opacity: 0.5;
     z-index: 0;
 
@@ -165,7 +165,7 @@
   margin-left: 5px;
 }
 .GDIcon1 {
-  
+
   opacity: 0;
   align-items: right;
 
@@ -174,7 +174,7 @@
 }
 
 .moveright {
-    margin-left: 430px;
+    margin-left: 275px;
     position: relative;
 
 }
@@ -218,7 +218,7 @@ h1.gameTitle {
   height: 40px;
   margin-bottom: 10px;
 
-  margin-left: 680px;
+  margin-left: 525px;
   padding-bottom: 5px;
 
   background-color: rgba(255, 255, 255, 0);
@@ -231,7 +231,7 @@ h1.gameTitle {
   width: 500px;
   height: 40px;
 
-  margin-left: 680px;
+  margin-left: 525px;
   padding-bottom: 5px;
 
   background-color: rgba(0, 0, 0, 0);
