--- a/ghi/src/components/GameDetails/gameDetails.css
+++ b/ghi/src/components/GameDetails/gameDetails.css
@@ -126,8 +126,10 @@
     width: 100%;
     height: 100%;
     background-size: cover;
-    opacity: 0.5;
+    opacity: 1;
     z-index: 0;
+    object-fit: cover;
+    filter: brightness(0.5);
 
 }
 
