--- a/ghi/src/components/Cards/homeGameCard.css
+++ b/ghi/src/components/Cards/homeGameCard.css
@@ -76,12 +76,15 @@
 
         .hgcontent-head h2 {
             margin: 20px 0px;
-            font-size: 20px;
+            font-size: 16px;
             font-family: 'K2D', sans-serif;
-            color: white;
+            color: rgb(255, 255, 255);
             top: 0px;
             left: 12px;
             position: relative;
+            background-color: rgba(0, 0, 0, 0.566);
+            border-radius: 10px;
+            padding: 2px;
         }
 
         .hgcontent-body p {
