--- a/ghi/src/components/Cards/userReviewCard.css
+++ b/ghi/src/components/Cards/userReviewCard.css
@@ -1,121 +1,113 @@
 @import url('https://fonts.googleapis.com/css2?family=K2D:wght@100&display=swap');
 
-
 .urcard {
     background-color: #2e2e2e;
     width: 600px;
-    height: 250px;
+    height: auto;
     border: 1px solid black;
     border-radius: 10px;
     overflow: hidden;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     margin: 10px;
     margin-top: 25px;
-/*     display: flex; */
+    display: flex;
+    flex-direction: column;
 }
 
 .urcard-content {
     display: flex;
-    justify-content: flex-end;
+    flex-direction: column;
+    padding: 20px;
 }
 
-
-
 .urcard-photo img {
-    background-color: transparent;
     width: 125px;
     height: 125px;
     border-radius: 50%;
-    position: fixed;
-    margin: 10px;
-    margin-bottom: 20px;
-    margin-left: 25px;
-    flex: 1;
-    overflow: hidden;
-
-
+    margin-right: 20px;
 }
 
 .urcard-details {
-    flex: 2;
-    padding: 0px;
-    color: black;
-    font-family: 'K2D';
-    font-size: 12px;
-    text-align: center;
-    margin-top: 30px;
-    margin-left: 150px;
-    margin-right: 40px;
-    position: relative;
-
-
+    flex: 1;
+    color: white;
 }
 
 .urcard-title {
     font-size: 20px;
     margin: 0;
-    color: black;
     text-align: center;
     margin-top: 10px;
     font-family: 'K2D';
+    color: white;
 }
 
 .urcard-date {
     font-size: 18px;
     margin: 0;
-    color: rgb(0, 0, 0);
     text-align: right;
-    margin-top: -25px;
-    margin-right: 40px;
     font-family: 'K2D';
-    color: black;
-
+    color: white;
 }
+
 .urcard-edit-delete {
     font-size: 18px;
     margin: 0;
-    color: rgb(0, 0, 0);
     text-align: left;
-    margin-top: -25px;
-    margin-left: 40px;
     font-family: 'K2D';
-    color: black;
-
-
+    color: white;
 }
 
 .urline {
-    width: 90%;
-    height: 3px;
-    margin-left: 40px;
-
+    width: 100%;
+    height: 1px;
+    margin-top: 20px;
+    margin-bottom: 20px;
     background: rgb(138, 138, 138);
+}
 
+.urcard-content p {
+    margin: 0;
+    margin-bottom: 10px;
+}
+
+.urcard-content .urcard-title {
+    margin-bottom: 10px;
+}
+
+.urcard-content .urcard-details {
+    margin-top: 10px;
 }
 
 .thumbs-up {
-  width: 25px;
-  height: 25px;
-  margin-left: 660px;
-  position: fixed; /* Adjust margin as needed */
+    width: 25px;
+    height: 25px;
+    margin-right: 10px;
 }
 
 .thumbs-down {
-  width: 25px;
-  height: 25px;
-  margin-left: 720px;
-  margin-top: -40px;
-  position: fixed;
+    width: 25px;
+    height: 25px;
+    margin-right: 10px;
 }
+
 .urp2 {
     text-align: right;
-    margin-right: 88px;
-    margin-bottom: 20px;
-    margin-top: -90;
+    margin-bottom: 10px;
 }
 
 .urp {
     text-align: right;
-    margin-right: 88px;
-    position: relative;
+}
+
+/* Add other styles as needed based on your design */
+.edit-form-container {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  z-index: 1000; /* Ensure the form is on top of other elements */
 }
