Can upvote and downvote a review one at a time - also fixed backend to correctly update upvote_count for review

--- a/ghi/src/components/Cards/largeUserReviewCard.css
+++ b/ghi/src/components/Cards/largeUserReviewCard.css
@@ -97,7 +97,7 @@
   width: 25px;
   height: 25px;
   margin-left: 660px;
-  position: fixed; /* Adjust margin as needed */
+  position: fixed;
 }
 
 .thumbs-down {
