--- a/ghi/src/components/Cards/wishlistCard.css
+++ b/ghi/src/components/Cards/wishlistCard.css
@@ -6,17 +6,18 @@
   position: relative;
   right: 450px;
   top: 15px;
-  margin-right: 5px;
+  margin-right: 0px;
 }
 
 .wcontent-capsules {
-  margin-top: 12px;
+  margin-top: 0px;
   display: flex;
   gap: 5px;
 }
 
 .gcontent-capsules img {
   margin-right: 2px;
+  margin-bottom: 5px;
 }
 
 .side-by-side {
@@ -35,8 +36,8 @@
   color: white !important;
 }
 
-.wcard {
-  background-color: rgba(160, 160, 160, 0);
+.wishlistcard {
+  background-color: rgb(123, 123, 123);
   width: 800px;
   height: 145px;
   border: 1px solid black;
@@ -51,16 +52,17 @@
   display: flex;
 }
 
-.wcard-photo {
+/* .wcard-photo {
   flex: 1;
   overflow: hidden;
-}
+} */
 
 .wcard-photo img {
   width: 200px;
   height: 125px;
   border-radius: 25px;
-  margin: 10px;
+  margin: 0px;
+  margin-top: -40px;
   box-shadow: 0px 0px 10.6px 10px rgba(255, 255, 255, 0.25);
 }
 
@@ -92,4 +94,9 @@ hr.solid {
   margin: 0;
   padding-right: 10px;
   color: rgb(0, 0, 0);
+}
+
+.gamename {
+  text-align: right;
+  flex: 2;
 }
