--- a/ghi/src/components/Cards/userReviewCard.css
+++ b/ghi/src/components/Cards/userReviewCard.css
@@ -25,40 +25,55 @@
     height: 125px;
     border-radius: 50%;
     margin-right: 20px;
+    flex: 1;
 }
 
 .urcard-details {
-    flex: 1;
+    flex: 2;
     color: white;
+    text-align: right;
 }
 
 .urcard-title {
+    flex: 2;
     font-size: 20px;
     margin: 0;
     text-align: center;
     margin-top: 10px;
+    margin-bottom: -20px;
     font-family: 'K2D';
     color: white;
 }
 
 .urcard-date {
+    flex: 3;
     font-size: 18px;
-    margin: 0;
+
     text-align: right;
     font-family: 'K2D';
     color: white;
 }
 
 .urcard-edit-delete {
+    flex: 1;
     font-size: 18px;
-    margin: 0;
     text-align: left;
     font-family: 'K2D';
     color: white;
+    margin-left: 6px;
+}
+
+.urcard-edit-delete1 {
+    font-size: 18px;
+    text-align: right;
+    font-family: 'K2D';
+    color: white;
+
 }
 
 .urline {
-    width: 100%;
+    width: 90%;
+    margin-left: 30px;
     height: 1px;
     margin-top: 20px;
     margin-bottom: 20px;
@@ -68,6 +83,7 @@
 .urcard-content p {
     margin: 0;
     margin-bottom: 10px;
+    display: flex;
 }
 
 .urcard-content .urcard-title {
@@ -81,7 +97,7 @@
 .thumbs-up {
     width: 25px;
     height: 25px;
-    margin-right: 10px;
+    margin-right: 0px;
 }
 
 .thumbs-down {
