--- a/ghi/src/components/Cards/boardGameCard.css
+++ b/ghi/src/components/Cards/boardGameCard.css
@@ -2,7 +2,8 @@
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
-  margin-left: 0px;
+  margin-left: 10px;
+  margin-right: 10px;
   justify-content: flex-start;
 }
 
@@ -10,9 +11,8 @@
   background-color: #353536;
   margin: 0 auto;
   padding: 15px;
-  width: calc(33.33% - 10px);
+  width: 325px;
   height: auto;
-  transition-duration: 2s;
   border-radius: 20px;
   margin-top: 50px;
 }
@@ -22,7 +22,7 @@
   box-shadow: rgba(245, 20, 20, 0.425) 0px 50px 100px -20px, rgba(255, 255, 255, 0.671) 0px 30px 60px -30px, rgba(214, 214, 214, 0.54) 0px -2px 6px 0px inset;
 }
 
-.board-game-card {
+/* .board-game-card {
   background-color: #353536;
   margin: 0px auto;
   padding: 15px;
@@ -31,7 +31,7 @@
   transition-duration: 2s;
   border-radius: 20px;
   margin-top: 50px;
-}
+} */
 
 .board-game-card:hover {
   transition-duration: 1s;
@@ -40,7 +40,7 @@
 
 .board-game-card-img {
   background-color: black;
-  width: 300px;
+  width: 100%;
   height: 170px;
   border-radius: 20px 20px 0px 0px;
   box-shadow: 0px 25px 35px black;
