--- a/ghi/src/components/Home/Menu.css
+++ b/ghi/src/components/Home/Menu.css
@@ -35,7 +35,18 @@
   padding: 0px;
   cursor: pointer;
   transition: background-color 0.3s ease;
-  font-size: 13px;
+  font-size: 14px;
+  color: white;
+}
+
+.linkside {
+  margin: 5px 0;
+  padding: 0px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  font-size: 14px;
+  color: white;
+
 }
 
 .side-menu li:hover {
