--- a/ghi/src/components/Home/Landing.css
+++ b/ghi/src/components/Home/Landing.css
@@ -8,7 +8,7 @@
   margin-left: 300px;
 }
 .hero-carousel-container {
-  background-color: #000000;
+  background-color: #1a1a1a;
   overflow: hidden;
   position: relative;
   margin: 0px auto;
