--- a/ghi/src/components/SearchResults/SearchResults.css
+++ b/ghi/src/components/SearchResults/SearchResults.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=K2D:wght@100&display=swap');
 
 
-        .hgcard-container {
+        .shgcard-container {
             display: flex;
             flex-wrap: wrap;
             justify-content: flex-start;
@@ -31,7 +31,7 @@
 
         }
 
-        .hgcard-img {
+        .shgcard-img {
             background-color: black;
             width: 200px;
             height: 120px;
@@ -43,7 +43,7 @@
 
         }
 
-        .hgcontent-capsules {
+        .shgcontent-capsules {
             margin-top: -7px;
             display: flex;
             gap: 5px;
@@ -64,7 +64,7 @@
 
         } */
 
-        .hgcontent-capsules span:hover {
+        .shgcontent-capsules span:hover {
             color: black;
             border: px solid gray;
             box-shadow: rgba(28, 28, 28, 0.3) 0px 5px 10px, rgba(59, 59, 59, 0.22) 0px 6px 3px;
@@ -73,7 +73,7 @@
 
         }
 
-        .hgcontent-head h2 {
+        .shgcontent-head h2 {
             margin: 20px 0px;
             font-size: 16px;
             font-family: 'K2D', sans-serif;
@@ -86,7 +86,7 @@
             padding: 2px;
         }
 
-        .hgcontent-body p {
+        .shgcontent-body p {
 
             font-family: sans-serif;
             font-size: 10px;
@@ -96,14 +96,14 @@
 
         }
 
-        .hgbutton {
+        .shgbutton {
             margin: 10px 0px;
             text-align: right;
             color: black;
 
         }
 
-        .hgbutton button {
+        .shgbutton button {
             padding: 5px 0px;
             font-family: 'K2D';
             font-size: 12px;
@@ -117,7 +117,18 @@
             box-shadow: 0px 8px 10px black;
         }
 
-        .hbutton button:hover {
+        .shbutton button:hover {
             background-color: grey;
             transition: 0.5s;
+        }
+
+        .search-results-container {
+            background-color: black;
+            margin-left: 10%;
+            margin-top: 5%;
+
+        }
+
+        .search-div {
+            background-color: black;
         }
