style for search page

--- a/ghi/src/components/SearchResults/SearchResults.css
+++ b/ghi/src/components/SearchResults/SearchResults.css
@@ -130,5 +130,12 @@
         }
 
         .search-div {
+            margin-left: 180px;
+            margin-top: 150px;
+            color: black;
+            background-color: black;
+        }
+
+        html {
             background-color: black;
         }
