Still a little bugg but got the delete account function working and got it to navigate to the landing page there is also a hero image that needs some adjustments for the login page that is strech goal territory

--- a/ghi/src/components/Home/Menu.css
+++ b/ghi/src/components/Home/Menu.css
@@ -80,3 +80,33 @@ hr.dotted {
 .small-space {
             margin-bottom: 10px;
         }
+
+
+
+
+  /* .heroimg { */
+      /* width: 25%; */
+      /* margin-left: 18rem;
+      top: 300px; */
+      /* margin-top: 300px; */
+
+      /* z-index: 4; */
+  /* Floating is being called and activated on line 67 */
+      /* animation-name: floating;
+      animation-duration: 3s;
+      animation-iteration-count: infinite;
+      animation-timing-function: ease-in-out; */
+
+
+    /* } */
+      /* @keyframes floating { */
+        /* 0% {
+          transform: translate(0, 0px);
+        }
+        50% {
+          transform: translate(0, 10px);
+        }
+        100% {
+          transform: translate(0, -0px);
+        }
+      } */
