--- a/ghi/src/components/SearchResults/SearchResults.css
+++ b/ghi/src/components/SearchResults/SearchResults.css
@@ -1,11 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=K2D:wght@100&display=swap');
 
 
+        .searchbody {
+            margin-left: 200px;
+            margin-top: 150px;
+            color: black;
+        }
+
+
         .hgcard-container {
             display: flex;
             flex-wrap: wrap;
             justify-content: flex-start;
             gap: 15px;
+
 
             }
 
@@ -18,6 +26,7 @@
             transition-duration: 2s;
             border-radius: 20px;
             margin-top: 50px;
+
 
 
 
