--- a/ghi/src/components/Cards/largeUserReviewCard.css
+++ b/ghi/src/components/Cards/largeUserReviewCard.css
@@ -93,20 +93,26 @@
 
 }
 
-.thumbs-up {
+.thumb-up {
   width: 25px;
   height: 25px;
-  margin-left: 660px;
-  position: fixed;
+  margin: auto;
+  padding: 3px;
+
+
 }
 
 .thumbs-down {
   width: 25px;
   height: 25px;
-  margin-left: 720px;
-  margin-top: -40px;
-  position: fixed;
+  margin: auto;
+  padding: 3px;
 }
+
+.down-btn {
+    margin-left: 5px;
+}
+
 .lurp2 {
     text-align: right;
     margin-right: 88px;
